2007-07-15  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/EphyBrowser.cpp:
	* embed/mozilla/EphyHeaderSniffer.cpp:
	* embed/mozilla/EphyHistoryListener.cpp:
	* embed/mozilla/EphyPromptService.cpp:
	* embed/mozilla/GeckoFormSigningDialog.cpp:
	* embed/mozilla/GeckoPrintService.cpp:
	* embed/mozilla/GeckoPrintSession.cpp:
	* embed/mozilla/mozilla-embed-event.cpp:
	* embed/mozilla/mozilla-embed.cpp:
	* plugins/desktop-file/plugin.cpp:

	Use C++ casts. Script from bmo#348748.

2007-07-15  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp:

	Make sure postscript printing is enabled, and the printer list empty
	(so we only get the PostScript/default printer).

2007-07-15  Christian Persch  <chpe@gnome.org>

	* data/chrome/about.xhtml:
	* data/epiphany.desktop.in.in:
	* data/icons/16x16/apps/Makefile.am:
	* data/icons/22x22/apps/Makefile.am:
        * data/icons/24x24/apps/Makefile.am:
	* data/icons/32x32/apps/Makefile.am:
	* data/icons/scalable/apps/Makefile.am:
	* lib/ephy-stock-icons.h:

	Use the right icon name. Bug #385872.

2007-07-15  Christian Persch  <chpe@gnome.org>

	* src/popup-commands.c: (background_download_completed):

	Load the appearance capplet. Doesn't seem to work yet, see bug
	#456337.

2007-07-14  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/ContentHandler.cpp:
	* embed/mozilla/EphySingle.cpp:
	* embed/mozilla/MozDownload.cpp:

	It's yet another API change!

2007-07-11  Nguyễn Thái Ngọc Duy <pclouds@gmail.com>

	* embed/mozilla/MozDownload.cpp:

	Fixes bug #452707

2007-07-11  Christian Persch  <chpe@gnome.org>

	* data/default-prefs-common.js:

	Use the right prefs to disable CUPS.

2007-07-11  Luca Ferretti  <elle.uca@libero.it>

	* data/chrome/about.xhtml:

	Use new "epiphany" icon here (thanks to Rodney Dawes).
	
	* data/icons/32x32/apps/Makefile.am:
	* data/icons/32x32/apps/epiphany.svg:
	* data/icons/32x32/apps/epiphany.svg:

	Add 32x32 pixel icon (thanks to Andreas Nilsson).
