@@ -1,3 +1,14 @@
+2007-07-16  Christian Persch  <chpe@gnome.org>
+
+	* configure.ac:
+	* doc/reference/Makefile.am:
+	* embed/Makefile.am:
+	* embed/mozilla/Makefile.am:
+	* plugins/desktop-file/Makefile.am:
+	* src/Makefile.am:
+
+	s/MOZILLA/GECKO/g for consistency with gge.
+
 2007-07-15  Christian Persch  <chpe@gnome.org>
 
 	* embed/mozilla/EphyBrowser.cpp:
